syntax = "proto3";

package wikipaddle.api.v1;

option ruby_package = "WikiPaddleApi::V1";

service Mobile {
  rpc GetUser(UserRequest) returns (UserResponse);
  rpc GetGuide(GuideRequest) returns (GuideResponse);
  rpc GetGuidesCollection(GetGuidesCollectionRequest)
      returns (GetGuidesCollectionResponse);
  rpc GetCurrentUser(GetCurrentUserRequest) returns (UserResponse);
  rpc GetGuideCommentsCollection(GetGuideCommentsCollectionRequest)
      returns (GetGuideCommentsCollectionResponse);
  rpc CreateGuideComment(CreateGuideCommentRequest) returns (GuideComment);
}

message GetGuidesCollectionRequest {
  int32 page = 1;
}

message GetGuidesCollectionResponse {
  Pagination pagination = 1;
  repeated GuideCollectionItem guides = 2;
}

message GuideCollectionItemPhoto {
  string url = 1;
}

message GuideCollectionItem {
  string id = 1;
  string title = 2;
  string country = 3;
  string state = 4;
  string localizedDistance = 5;
  string starRating = 6;
  repeated GuideCollectionItemPhoto photos = 7;
}

message GetCurrentUserRequest {}

message Pagination {
  int32 currentPage = 1;
  int32 perPage = 2;
  int32 totalResults = 3;
  int32 totalPages = 4;
}

message UserRequest { string id = 1; }

message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string fullName = 4;
  string avatarUrl = 5;
}

message UserResponse { User user = 1; }

message GuideRequest { string id = 1; }

message GuideResponse { Guide guide = 1; }

message LatLng {
  double latitude = 1;
  double longitude = 2;
}

message Guide {
  string id = 1;
  string title = 2;
  string description = 3;
  string url = 5;
  LatLng startLatLng = 6;
  LatLng endLatLng = 7;
  bytes polyline = 8;
  string country = 9;
  string state = 10;
  string localizedDistance = 11;
  int32 commentsCount = 12;
  int32 uploadsCount = 13;
  string starRating = 14;
}

message FitnessActivity {
  string id = 1;
  string name = 2;
  LatLng startLatLng = 3;
  LatLng endLatLng = 4;
  bytes polyline = 5;
}

message GuideComment {
  string id = 1;
  string body = 2;
  string userFullName = 3;
  string userAvatarUrl = 4;
  string createdAt = 5;
  int32 starRating = 6;
}

message GetGuideCommentsCollectionRequest {
  string guideId = 1;
  int32 page = 2;
}

message GetGuideCommentsCollectionResponse {
  Pagination pagination = 1;
  repeated GuideComment comments = 2;
}

message CreateGuideCommentRequest {
  string guideId = 1;
  string body = 2;
  int32 starRating = 3;
}
